--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,7 +663,7 @@ body {
 	background-image: url(../images/light-bl.svg),
 										url(../images/light-br.svg),
 										url(../images/overlay.png),
-										url(./damac-3.jpg);
+										url(./dm4.jpg);
 
 	background-position: bottom left, bottom right, top left, top center;
 	background-repeat: no-repeat, no-repeat, repeat, no-repeat;
@@ -771,7 +771,7 @@ body {
 	background-image: url(../images/light-tl.svg),
 										url(../images/light-tr.svg),
 										url(../images/overlay.png),
-										url(./th.jpg);
+										url(./damac-3.jpg);
 	background-position: top left, top right, top left, bottom center;
 	background-attachment: scroll, scroll, scroll, fixed;
 	background-repeat: no-repeat, no-repeat, repeat, no-repeat;
