--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ img {
 /* BACKGROUNDS
 ----------------------------------------------*/
 .BG-white {
-	background-color: white;
+	background-color: beige;
 }
 
 
